# sportradar-cli

./: .env.example  .gitignore  Cargo.toml  Matchday_Rust_assignment_v2.md  README.md  Rust_assignment_v2.md
src/: main.rs
src/api_responses/: competition_seasons_api_response.rs  competitions_api_response.rs  competitor_statistics_api_response.rs  mod.rs  schedules_api_response.rs
src/enums/: mod.rs  player_enums.rs
src/helpers/: cli_helpers.rs  env_getters.rs  mod.rs
src/models/: app_state.rs  competition.rs  competition_season.rs  country.rs  mod.rs  player.rs  player_statistics.rs  sport.rs  sport_event.rs  team.rs
src/services/: api_service.rs  app_state_service.rs  base_info_service.rs  competitors_service.rs  construct_service.rs  country_service.rs  id_service.rs  mod.rs  names_service.rs  player_season_statistics_service.rs  player_service.rs  player_statistics_service.rs  season_service.rs
