[package]
name = "sportradar"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
reqwest-retry = "0.6.1"
reqwest-middleware = "0.3.3"
serde = { version = "1.0.209", features = ["derive"] }
inquire = "0.7.5"
dotenvy = "0.15.7"
colorize = "0.1.0"
itertools = "0.13.0"
